<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ivi_blue"
    tools:context=".presentation.fragments.settings.SettingsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/settings_top_bar_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/settings_top_bar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/main_menu_settings" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/settings_home_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/settings_home_fragment"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_top_bar_layout" />

    <RadioGroup
        android:id="@+id/home_settings"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_home_label">

        <RadioButton
            android:id="@+id/radio_button_popular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_popular"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:buttonTint="@color/white" />

        <RadioButton
            android:id="@+id/radio_button_top_rated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_top_rate"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:buttonTint="@color/white" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>